portfolio page fixed with scrollbar on total page

--- a/new/css/drawer.css
+++ b/new/css/drawer.css
@@ -14,7 +14,7 @@
 }
 
 html,
-body { 
+body {
 }
 
 /* gets the actual input out of the way; 
@@ -83,11 +83,8 @@ header{
 /*we make an extra container for the whole content pane, that is 100% width.
 This makes sure that the whole pane moves to the right and a bit off the screen when the menu opens, rather than resizing the whole content for a smaller area.*/
 .page-content { 
-	margin-top: 60px;
-	height: calc(100% - 60px);
 	width: 100%;
 	overflow-x: hidden;
-	overflow-y: scroll;
 	-webkit-overflow-scrolling: touch;
 }
 
